projects/stencil/src/components/mds-usage/mds-usage.css
/**
 * @prop --mds-usage-border-color: Sets the border color of the component.
 * @prop --mds-usage-badge-background: Sets the badge background-color of the component.
 * @prop --mds-usage-badge-color: Sets the badge text color of the component.
 */

:host {
  --mds-usage-border-color: theme('colors.status-info-06');
  --mds-usage-badge-background: theme('colors.status-info-05');
  --mds-usage-badge-color: theme('colors.status-info-10');

  @apply
    duration-200
    ease-out
    gap-200
    p-400
    pt-0
    rounded-lg;

  background-color: rgb(var(--status-info-10));
  border-color: var(--mds-usage-border-color);
  border-style: solid;
  border-width: theme('borderWidth.DEFAULT');
  container-name: mds-usage;
  container-type: inline-size;
  display: grid;
  grid-auto-rows: min-content;
  grid-template-columns: minmax(0, 100%);
  position: relative;
  transition-property: background-color, box-shadow, color;
  width: 100%;
}

@container mds-usage (min-width: 500px) {
  :host {
    background-color: rgb(var(--status-error-10));
  }
}

@import './css/mds-usage-badge.css';
@import './css/mds-usage-pref-animation.css';
@import './css/mds-usage-pref-contrast.css';
@import './css/mds-usage-pref-theme.css';
@import './css/mds-usage-variant.css';
@import '../../tailwind/fouc.css';

